fix read write sdcard on mobile